--- a/src/component/form/item/input/Input.css
+++ b/src/component/form/item/input/Input.css
@@ -1,7 +1,5 @@
-.input{
-    display: block;
-    width: 90%;
-    padding: .375rem .75rem;
+input{
+    padding: .375rem 0 .375rem 0;
     font-size: .9rem;
     line-height: 1.6;
     color: #495057;
