--- a/src/container/home/Home.css
+++ b/src/container/home/Home.css
@@ -1,16 +1,26 @@
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
 .home{
     display: flex;
     justify-content: center;
-   
 }
 
 .home div{
-    margin: 15px;
-    width: 25%;
+    margin: 15px 30px 0 0 ;
 }
 
 .home div h2 {
-    align-items: center;
     padding-bottom: 14px;
     font-size: 26px;
     font-weight: normal;
@@ -52,10 +62,15 @@
     border-radius: 50%;
     user-select: none;
 }
-@media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    .col-3 {
-        width: 100%;
-       
+
+@media only screen and (max-width: 425px) {
+    /* For mobile phones: S , M ,L*/
+    .home {
+        display: block;
+        padding-left: 15px;
     }
+    .home div {
+        width: 100%;
+    }
+
 }
